# AlgBench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  release.yml
docs/: algbench.db.rst  algbench.rst  algbench.utils.rst  conf.py  index.rst  modules.rst
examples/graph_coloring/: 00_generate_instances.py  02_run_benchmark.py  02b_run_benchmark_with_slurminade.py  04_check_results.ipynb  05_process_results.py  07_analyze.ipynb  07_analyze_mean.ipynb  08_analyze_runtime.ipynb  09_analyze_quality.ipynb  README.md  requirements.txt
examples/graph_coloring/_utils/: __init__.py
examples/gurobi_tsp_with_slurminade/: README.md  instances.py  run_evaluation_v0.py  run_evaluation_v1.py  run_evaluation_v2.py  run_evaluation_v3.py  solver.py
src/algbench/: __init__.py  _stream_utils.py  benchmark.py  benchmark_db.py  environment.py  fingerprint.py  json_serializer.py  log_capture.py  nfs_json_db.py  pandas.py  stream_with_time.py
src/algbench/db/: __init__.py  json_serializer.py  nfs_json_dict.py  nfs_json_list.py  nfs_json_set.py
src/algbench/utils/: __init__.py  timer.py
tests/: test_apply.py  test_basics.py  test_extensive.py  test_file_splitting.py  test_fingerprinting.py  test_logger.py
